src/test/deca/context/valid/provided/operation.deca
{
    int i = 5;
    float j;
    j = i - 1.5;
    i = i + 15;
    println(j + i);
}