src/test/deca/context/invalid/sansObjet/moduloFloat.deca
{
    float f = 1.0;
    int i = 2;
    int res;
    res = f % i; 
}